0.06
 - Fix check in case of invalid leader in Field008 plugin.
 - Fix field 008 presence.
 - Fix field 040e presence.
 - Rewrite identification of record id for reporting. Default value is control
   field 001. We could change it by definition of 'error_id_def' parameter.

0.05 2025-10-30T08:35:46+01:00
 - Fix REPOSITORY section in doc.
 - Fix check of 040 field with RDA rules.

0.04 2025-10-03T01:14:41+02:00
 - Add plugin for field 040e with leader 018 a.

0.03 2025-09-28T20:34:58+02:00
 - Add test for bad ISBN (field 020a).
 - Add test for record without ISB (field 020a).
 - Fix dependencies.

0.02 2025-09-28T09:09:10+02:00
 - Add add_error() helper function.
 - Add validation for field 020a ISBN.
 - Regen doc EXAMPLE.

0.01 2025-07-02T21:32:38+02:00
 - First version.